Close button visibility was fixed

--- a/blocks/floating-close-button/floating-close-button.css
+++ b/blocks/floating-close-button/floating-close-button.css
@@ -4,7 +4,7 @@
   position: absolute;
   top: -36px;
   right: 0px;
-  background: url('./../../../images/icon-close.svg') no-repeat center / cover;
+  background: url('../../images/icon-close.svg') no-repeat center / cover;
   border: none;
   box-shadow: none;
   cursor: pointer;
